# mdit-closedloop

./: README.md  pyproject.toml  setup.cfg
.todo/: done.txt  todo.txt  todo.txt.bak
mdit_closedloop/: __init__.py  dict.py  labels.py  object.py  parser.py  partialproperty.py  plugin.py
mdit_closedloop/plugins/: __init__.py
mdit_closedloop/plugins/checkboxes/: __init__.py  parser.py  plugin.py  token_view.py
mdit_closedloop/plugins/labels/: __init__.py
mdit_closedloop/tokens/: token.py  token_view.py
tests/: conftest.py  test_labels_plugin.py  test_parser.py  test_plugin.py
tests/plugins/: test_labels_plugin.py
tests/plugins/checkboxes/: test_checkbox_plugin.py  test_parser.py  test_token_view.py
tests/tokens/: test_token.py  test_token_view.py
